# pitivi

./: .arcconfig  .cvsignore  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .pre-commit-config.yaml  AUTHORS  COPYING  ChangeLog  MAINTAINERS  Makefile.am  NEWS  NORME  README  README.md  RELEASE  TODO  autogen.sh  configure  configure.ac  getenvvar.py  intltool-merge.in  intltool-update.in  meson.build  meson_options.txt  mypy.ini  pitivi.desktop  pitivi.desktop.in  pitivi.desktop.in.in  pitivi.doap  pitivi.spec  pitivi.spec.in  pitivi.xml  pre-commit.hook  pylint.rc  runner
data/: Makefile.am  meson.build  org.pitivi.Pitivi-mime.xml  org.pitivi.Pitivi.appdata.xml.in  org.pitivi.Pitivi.desktop.in  pitivi.appdata.xml.in  pitivi.desktop.in  pitivi.desktop.in.in
data/audiopresets/: Makefile.am  iPod.json
data/gstpresets/: GstJpegEnc.prs  Makefile.am  jpeg-flac-in-matroska.gep  jpeg-opus-in-matroska.gep  jpeg-raw-in-matroska.gep  jpeg-raw-in-qt.gep  prores-flac-in-matroska.gep  prores-opus-in-matroska.gep  prores-raw-in-matroska.gep  prores-raw-in-qt.gep
data/icons/: Makefile.am  meson.build
data/pixmaps/: Makefile.am
data/profiles/: Makefile.am  desire.json  ipod.json
data/renderpresets/: Blu-ray.json  DVD.json  HTML5_video.json  Makefile.am  desire.json  ipod.json  n800.json
data/ui/: Makefile.am  alignmenteditor.ui  alignmentprogress.ui  app_menu.xml  audiotransformation.ui  beatdetection.ui  clip_pop_menu.ui  clipblending.ui  clipcolor.ui  clipcompositing.ui  clipmediaprops.ui  clipsolidcolor.ui  cliptiming.ui  cliptransformation.ui  cliptransformation_1.ui  cliptrimming.ui  depsmanager.ui  effect-alpha.ui  effectslibrary.ui  elementsettingsdialog.ui  encodingdialog.ui  encodingprogress.ui  filelisterrordialog.ui  greeter.ui  intractiveintromenubutton.ui  mainmenubutton.ui  mainwindow.xml  markerpopover.ui  medialibrary.ui  pluginmanagerdialog.ui  pluginpreferencesrow.ui  preferences.ui  project_info.ui  projectsettings.ui  renderingdialog.ui  renderingprogress.ui  startupwizard.ui  timelinecontainer.xml  timelinetoolbar.ui  timelinetoolbar_h.ui  (+6 more)
data/videopresets/: 1080SDp24.json  1080SDp30.json  1080p24.json  1080p30.json  720p24.json  720p30.json  HDV_1080i30.json  Makefile.am  iPod.json
help/: LINGUAS  Makefile.am  meson.build
help/C/: about.page  alignment.page  cheatsheet.page  codecscontainers.page  crossfading.page  effects.page  effectsanimation.page  fadeinfadeout.page  grouping.page  gstreamer.page  importing.page  importingmpegts.page  index.page  insertintimeline.page  interface.page  keyframecurves.page  layers.page  license.page  mainwindow.page  makeselections.page  medialibrary.page  meson.build  movearoundtimeline.page  othertransitions.page  presets.page  projectsettings.page  rendering.page  saveproject.page  savescreenshot.page  selectiongrouping.page  selectunusedfiles.page  splitting.page  sysreq.page  timing.page  title_clip.page  titleclip.page  transitions.page  trimming.page  usingclips.page  usingeffects.page  (+2 more)
help/ca/: ca.po  meson.build
help/cs/: cs.po  meson.build
help/de/: de.po  meson.build
help/el/: el.po  meson.build
help/es/: es.po  meson.build
help/fr/: fr.po  meson.build
pitivi/: .cvsignore  Makefile.am  __init__.py  action.py  action_search_bar.py  actioner.py  application.py  autoaligner.py  basetabs.py  bin.py  check.py  check_pipeline.py  clipalignment.py  clipproperties.py  configure.py.in  debug.py  device.py  discoverer.py  dnd.py  editorperspective.py  editorstate.py  effects.py  encode.py  greeterperspective.py  instance.py  interactiveintro.py  intractiveinto.py  intro_info_list.py  mainwindow.py  mediafilespreviewer.py  medialibrary.py  objectfactory.py  perspective.py  perspectivemanager.py  pipeline.py  pitivi.py  pitivigstutils.py  pitivintrolist.py  playground.py  plugincore.py  (+34 more)
pixmaps/: Makefile.am  backward.xpm  bg.xpm  bg_audio.xpm  bg_effects.xpm  bg_effects.xpm~  bg_trans.xpm  bg_video.xpm  blank.xpm  forward.xpm  pause.xpm  pitivi.xpm  play.xpm  stop.xpm  volume.xpm
po/: .gitignore  ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  POTFILES.skip  ar.po  ast.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  ku.po  lt.po  lv.po  meson.build  mr.po  nb.po  nds.po  (+21 more)
src/: Makefile.am  main.c  pitivi-checkbox.c  pitivi-checkbox.h  pitivi-codecconfwindow.c  pitivi-codecconfwindow.h  pitivi-controller.c  pitivi-controller.c~  pitivi-controller.h  pitivi-controller.h~  pitivi-convert-time.c  pitivi-convert-time.h  pitivi-cursor.h  pitivi-cursorbits.h  pitivi-debug.c  pitivi-debug.h  pitivi-dragdrop.h  pitivi-drawing.c  pitivi-drawing.h  pitivi-effects_cat.h  pitivi-effectswindow.c  pitivi-effectswindow.h  pitivi-effectswindowproperties.c  pitivi-effectswindowproperties.h  pitivi-encodewindow.c  pitivi-encodewindow.h  pitivi-file-utils.c  pitivi-file-utils.c~  pitivi-file-utils.h  pitivi-file-utils.h~  pitivi-globalbin.c  pitivi-globalbin.h  pitivi-gstelementsettings.c  pitivi-gstelementsettings.h  pitivi-lplayerwindow.c  pitivi-lplayerwindow.h  pitivi-mainapp.c  pitivi-mainapp.h  pitivi-mediatrackinfo.c  pitivi-mediatrackinfo.c~  (+86 more)
tests/: 22222222.xges  Makefile.am  __init__.py  common.py  meson.build  ptv_testsuite.py  run_testsuite.py  runtests.py  testHList.py  test_action.py  test_action_search_bar.py  test_alpha_passthrough.py  test_application.py  test_autoaligner.py  test_basic.py  test_binary_search.py  test_cache.py  test_check.py  test_clipalignment.py  test_clipproperties.py  test_clipproperties_color.py  test_clipproperties_compositing.py  test_clipproperties_title.py  test_common.py  test_custom_effect_ui.py  test_discoverer.py  test_editorperspective.py  test_editorstate.py  test_effects.py  test_encode.py  test_etree_formatter.py  test_factories_base.py  test_factories_file.py  test_factories_operation.py  test_file_load_save.py  test_formatter.py  test_formatters_base.py  test_gap.py  test_integration.py  test_interactiveintro.py  (+65 more)
(+607 files in other folders)
