sources = [
    'about.page',
    'cheatsheet.page',
    'codecscontainers.page',
    'effects.page',
    'gstreamer.page',
    'importingmpegts.page',
    'importing.page',
    'index.page',
    'keyframecurves.page',
    'layers.page',
    'license.page',
    'mainwindow.page',
    'medialibrary.page',
    'movearoundtimeline.page',
    'presets.page',
    'rendering.page',
    'savescreenshot.page',
    'selectiongrouping.page',
    'splitting.page',
    'sysreq.page',
    'transitions.page',
    'trimming.page',
    'usingclips.page',
    'usingeffects.page',
    'workwithprojects.page'
]

media = [
  'figures/Pitivi.svg',
  'figures/codecscontainers.jpg',
  'figures/fadestep1.png',
  'figures/fadestep2.png',
  'figures/fadestep3.png',
  'figures/keyframecurves.png',
  'figures/layers.png',
  'figures/mainwindow.jpg',
  'figures/ripple-after.png',
  'figures/ripple-before.png',
  'figures/roll-after.png',
  'figures/roll-before.png',
  'figures/ruler.png',
  'figures/trimming-individual.png'
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
  symlink_media: true
)
