SUBDIRS = \
	dialogs 		\
	utils	\
	timeline	\
	undo

pitividir = $(libdir)/pitivi/python/pitivi

pitivi_PYTHON = \
	__init__.py 	\
	application.py	\
	autoaligner.py	\
	tabsmanager.py		\
	check.py 	\
	clipproperties.py	\
	configure.py 	\
	effects.py	\
	mainwindow.py		\
	mediafilespreviewer.py	\
	medialibrary.py	\
	render.py	\
	instance.py 	\
	preset.py		\
	project.py 	\
	settings.py 	\
	viewer.py

BUILT_SOURCES=configure.py

clean-local:
	rm -rf *.pyc *.pyo
