SUBDIRS = \
	coptimizations \
	dialogs \
	utils \
	timeline \
	undo \
	$(NULL)

pitividir = $(libdir)/pitivi/python/pitivi

pitivi_PYTHON = \
	__init__.py \
	application.py \
	autoaligner.py \
	check.py \
	clipproperties.py \
	configure.py \
	effects.py \
	mainwindow.py \
	mediafilespreviewer.py \
	medialibrary.py \
	preset.py \
	project.py \
	render.py \
	settings.py \
	tabsmanager.py \
	transitions.py \
	viewer.py \
	titleeditor.py \
	$(NULL)

BUILT_SOURCES=configure.py

clean-local:
	rm -rf *.pyc *.pyo
