# ************************************************************
# Autotools For Pitivi-GUI
# 
# Made By Casaxno <casano_g@epita.fr>
# See also : autogen.sh, configure.ac
#
# ============Modifications===================================
# Author  Date	Version	Description
# ------------------------------------------------------------
# GC	   29/04/2004	0.1.1	new standarts of programmation
# *************************************************************


pixmapdir = $(datadir)/pixmaps
pixmap_DATA =pitivi-48.png\
	pitivi-logo.png\
	pitivi-new-sample.png\
	pitivi-select-all.png\
	pitivi-selection-grow.png\
	pitivi-selection-shrink.png\
	pitivi-select-none.png

EXTRA_DIST = $(pixmap_DATA)

CLEANFILES = *.bak core* *.orig *~
