# ************************************************************
# Autotools For Pitivi-GUI
# 
# Made By Casaxno <casano_g@epita.fr>
# See also : autogen.sh, configure.ac
#
# ============Modifications===================================
# Author  Date	Version	Description
# ------------------------------------------------------------
# GC	   29/04/2004	0.1.1	new standarts of programmation
# *************************************************************


pixmapdir = $(datadir)/pixmaps/pitivi/

pixmap_DATA = backward.xpm\
bg_audio.xpm\
bg_effects.xpm\
bg_trans.xpm\
bg_video.xpm\
bg.xpm\
blank.xpm\
forward.xpm\
pause.xpm\
logo-pitivi.png\
pitivi-logo-splash.png\
pitivi-48.png\
pitivi_adjust_effect.png\
pitivi_agingTV_effect.png\
pitivi_alpha_color_effect.png\
pitivi_alpha_effect.png\
pitivi_audio_rate_effect.png\
pitivi_balance_effect.png\
pitivi_box_effect.png\
pitivi_BPWS_effect.png\
pitivi_crop_effect.png\
pitivi-cut.png\
pitivi-ddl_resize.png\
pitivi-ddr_resize.png\
pitivi_deinterlace_effect.png\
pitivi_diceTV_effect.png\
pitivi-dtl_resize.png\
pitivi-dtr_resize.png\
pitivi_edgeTV_effect.png\
pitivi-effects-category-open.png\
pitivi-effects-category.png\
pitivi-effects-sound.png\
pitivi-effects-soundtv.png\
pitivi-effects-tv.png\
pitivi_envelope_volume_effect.png\
pitivi_flipper_effect.png\
pitivi_frame_effect.png\
pitivi_gamma_effect.png\
pitivi-hand.png\
pitivi_IIr_effect.png\
pitivi-info.png\
pitivi-logo3.png\
pitivi-logo.png\
pitivi-logo-small.png\
pitivi-logo-splash.png\
pitivi_LPWS_effect.png\
pitivi_median_effect.png\
pitivi-new-sample.png\
pitivi_pass_effect.png\
pitivi-pointer.png\
pitivi_quark_effect.png\
pitivi_quarkTV_effect.png\
pitivi_rate_effect.png\
pitivi-resize.png\
pitivi_RevTV_effect.png\
pitivi_scaler_effect.png\
pitivi-select-all.png\
pitivi-selection-grow.png\
pitivi-selection-shrink.png\
pitivi-select-none.png\
pitivi_shagadelicTV_effect.png\
pitivi_smooth_effect.png\
pitivi_speed_effect.png\
pitivi_stereo_effect.png\
pitivi-stock-h-resize.png\
pitivi-stock-v-resize.png\
pitivi_synthetiser_effect.png\
pitivi_vertigoTV_effect.png\
pitivi-viewer-next.png\
pitivi-viewer-pause.png\
pitivi-viewer-play.png\
pitivi-viewer-previous.png\
pitivi-viewer-record.png\
pitivi-viewer-stop.png\
pitivi-viewer-volume-max.png\
pitivi-viewer-volume-medium.png\
pitivi-viewer-volume-min.png\
pitivi-viewer-volume.png\
pitivi-viewer-volume-zero.png\
pitivi_volume_effect.png\
pitivi_warpTV_effect.png\
pitivi-newproject.png\
pitivi-zoom.png\
pitivi-tools.png\
play.xpm\
smpte101.png\
smpte102.png\
smpte103.png\
smpte104.png\
smpte105.png\
smpte106.png\
smpte107.png\
smpte108.png\
smpte109.png\
smpte110.png\
smpte111.png\
smpte112.png\
smpte113.png\
smpte114.png\
smpte119.png\
smpte120.png\
smpte121.png\
smpte122.png\
smpte123.png\
smpte124.png\
smpte125.png\
smpte127.png\
smpte128.png\
smpte129.png\
smpte130.png\
smpte131.png\
smpte1.png\
smpte201.png\
smpte202.png\
smpte203.png\
smpte204.png\
smpte205.png\
smpte206.png\
smpte207.png\
smpte211.png\
smpte212.png\
smpte213.png\
smpte214.png\
smpte21.png\
smpte221.png\
smpte222.png\
smpte223.png\
smpte224.png\
smpte225.png\
smpte226.png\
smpte227.png\
smpte228.png\
smpte22.png\
smpte231.png\
smpte232.png\
smpte233.png\
smpte234.png\
smpte235.png\
smpte236.png\
smpte23.png\
smpte241.png\
smpte242.png\
smpte243.png\
smpte244.png\
smpte245.png\
smpte246.png\
smpte24.png\
smpte251.png\
smpte252.png\
smpte253.png\
smpte254.png\
smpte25.png\
smpte261.png\
smpte262.png\
smpte263.png\
smpte264.png\
smpte26.png\
smpte2.png\
smpte301.png\
smpte302.png\
smpte303.png\
smpte304.png\
smpte305.png\
smpte306.png\
smpte310.png\
smpte311.png\
smpte312.png\
smpte313.png\
smpte314.png\
smpte315.png\
smpte316.png\
smpte317.png\
smpte320.png\
smpte321.png\
smpte322.png\
smpte323.png\
smpte324.png\
smpte325.png\
smpte326.png\
smpte327.png\
smpte328.png\
smpte329.png\
smpte340.png\
smpte341.png\
smpte342.png\
smpte343.png\
smpte344.png\
smpte345.png\
smpte350.png\
smpte351.png\
smpte352.png\
smpte353.png\
smpte3.png\
smpte41.png\
smpte42.png\
smpte43.png\
smpte44.png\
smpte45.png\
smpte46.png\
smpte47.png\
smpte48.png\
smpte4.png\
smpte5.png\
smpte61.png\
smpte62.png\
smpte63.png\
smpte64.png\
smpte65.png\
smpte66.png\
smpte67.png\
smpte68.png\
smpte6.png\
smpte71.png\
smpte72.png\
smpte73.png\
smpte74.png\
smpte7.png\
smpte8.png\
smpte-failed.png\
stop.xpm\
volume.xpm

EXTRA_DIST = $(pixmap_DATA)

CLEANFILES = *.bak core* *.orig *~
