langs = [
    'ar', 'ast', 'bg', 'bs', 'ca', 'ca@valencia', 'cs',
    'da', 'de', 'dz', 'el', 'en_GB', 'eo', 'es', 'et',
    'eu', 'fi', 'fr', 'gl', 'gu', 'he', 'hu', 'it',
    'ja', 'ko', 'ku', 'lt', 'lv', 'mr', 'nb', 'nds',
    'nl', 'oc', 'pa', 'pl', 'pt_BR', 'pt', 'ro', 'ru',
    'sk', 'sl', 'sr@latin', 'sr', 'sv', 'te', 'tr', 'uk',
    'vi', 'zh_CN', 'zh_HK', 'zh_TW'
]

# Used for .desktop and .appdata translation
podir = '@0@'.format(meson.current_source_dir())
i18n = import('i18n')
i18n.gettext('pitivi', languages : langs)
